Remove design system and create a component to show alerts

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,1 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<app-certification-form domain="https://exo4341.qa.exolever.com/" level="CERTIFICATION_LEVEL_2_FORM"></app-certification-form>
+<app-certification-form></app-certification-form>
